<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.wso2telco.dep</groupId>
        <artifactId>app-store-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <artifactId>app-store</artifactId>
    <packaging>war</packaging>

    <dependencies>
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-servlet</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-common</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
        </dependency>
        <dependency>
            <groupId>com.esotericsoftware.yamlbeans</groupId>
            <artifactId>yamlbeans</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.utils</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wso2telco.core</groupId>
            <artifactId>dbutils</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wso2telco.core</groupId>
            <artifactId>user-profile</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wso2telco.core</groupId>
            <artifactId>auth-filter</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wso2telco.dep</groupId>
            <artifactId>app-store-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wso2telco.dep</groupId>
            <artifactId>app-store-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.apimgt</groupId>
            <artifactId>org.wso2.carbon.apimgt.hostobjects</artifactId>
            <version>6.0.4</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>app-store</finalName>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <!--  <execution>
                         <id>exec-npm-install</id>
                         <phase>generate-sources</phase>
                         <configuration>
                             <workingDirectory>../app-store-ui/</workingDirectory>
                             <executable>npm</executable>
                             <arguments>
                                 <argument>install</argument>
                             </arguments>
                         </configuration>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                     </execution> -->
                    <execution>
                        <id>exec-npm-run-build</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <workingDirectory>../app-store-ui/</workingDirectory>
                            <executable>npm</executable>
                            <arguments>
                                <argument>run</argument>
                                <argument>build</argument>
                            </arguments>
                        </configuration>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
